refactor: 정적 리소스 URL 반환 메서드 분리